--- a/Projeto1 Template - Copia.ipynb
+++ b/Projeto1 Template - Copia.ipynb
@@ -2404,30 +2404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "cont_relativo = trata_df(train,'CONT')[1]\n",
     "cont_absoluto = trata_df(train, 'CONT')[0]\n",
     "palavras_cont = trata_df(train, 'CONT')[2]\n",
     "\n",
-    "\n",
+    "ed_relativo = trata_df(train,'ED')[1]\n",
     "ed_absoluto = trata_df(train, 'ED')[0]\n",
     "palavras_ed = trata_df(train, 'ED')[2]\n",
     "\n",
-    "\n",
+    "plat_relativo = trata_df(train,'PLAT')[1]\n",
     "plat_absoluto = trata_df(train, 'PLAT')[0]\n",
     "palavras_plat = trata_df(train, 'PLAT')[2]\n",
     "\n",
-    "\n",
+    "outros_relativo = trata_df(train,'OUTROS')[1]\n",
     "outros_absoluto = trata_df(train, 'OUTROS')[0]\n",
     "palavras_outros = trata_df(train, 'OUTROS')[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2466,9 +2466,319 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'OUTROS',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'PLAT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'PLAT',\n",
+       " 'ED',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'ED',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'OUTROS',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'CONT',\n",
+       " 'PLAT',\n",
+       " 'CONT',\n",
+       " 'CONT']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#João tá fazendo coisa aqui\n",
     "def P_frase_cond_suavizada(comentário,df, alpha,total_de_possibilidades, palavras_target):\n",
@@ -2567,271 +2877,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Classificador</th>\n",
-       "      <th>CONT</th>\n",
-       "      <th>ED</th>\n",
-       "      <th>OUTROS</th>\n",
-       "      <th>PLAT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Target</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CONT</th>\n",
-       "      <td>53.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ED</th>\n",
-       "      <td>2.5</td>\n",
-       "      <td>10.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OUTROS</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PLAT</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Classificador  CONT    ED  OUTROS  PLAT\n",
-       "Target                                 \n",
-       "CONT           53.3   0.0     0.0   0.0\n",
-       "ED              2.5  10.6     0.0   0.5\n",
-       "OUTROS          7.0   0.5     4.0   1.5\n",
-       "PLAT            1.0   0.5     0.0  18.6"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_classificação = Classificador(test,1)\n",
-    "test['Classificador'] = lista_classificação\n",
-    "tabela_cruzada = pd.crosstab(test.Target, test.Classificador, normalize= True).round(3) * 100\n",
-    "def calcula_acertos(tabela):\n",
-    "    acuracia = tabela.CONT.CONT + tabela.ED.ED + tabela.PLAT.PLAT + tabela.OUTROS.OUTROS\n",
-    "\n",
-    "    return acuracia\n",
-    "\n",
-    "calcula_acertos(tabela_cruzada)\n",
-    "tabela_cruzada\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "53.30% são mensagens classificadas corretamente como CONT\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'{tabela_cruzada.CONT.CONT:0.2f}% são mensagens classificadas corretamente como CONT')"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[89.49999999999999,\n",
-       " 90.5,\n",
-       " 89.99999999999999,\n",
-       " 90.5,\n",
-       " 88.5,\n",
-       " 90.0,\n",
-       " 85.99999999999999,\n",
-       " 92.0,\n",
-       " 87.0,\n",
-       " 87.0,\n",
-       " 86.5,\n",
-       " 91.49999999999999,\n",
-       " 89.0,\n",
-       " 87.5,\n",
-       " 87.9,\n",
-       " 92.5,\n",
-       " 88.5,\n",
-       " 91.0,\n",
-       " 90.0,\n",
-       " 91.0,\n",
-       " 89.5,\n",
-       " 87.49999999999999,\n",
-       " 88.5,\n",
-       " 92.49999999999999,\n",
-       " 88.49999999999999,\n",
-       " 88.5,\n",
-       " 90.0,\n",
-       " 90.5,\n",
-       " 89.5,\n",
-       " 91.0,\n",
-       " 89.49999999999999,\n",
-       " 85.5,\n",
-       " 89.99999999999999,\n",
-       " 93.0,\n",
-       " 92.0,\n",
-       " 86.0,\n",
-       " 87.5,\n",
-       " 90.0,\n",
-       " 91.5,\n",
-       " 90.5,\n",
-       " 87.0,\n",
-       " 90.5,\n",
-       " 91.0,\n",
-       " 89.5,\n",
-       " 89.0,\n",
-       " 90.0,\n",
-       " 88.0,\n",
-       " 91.0,\n",
-       " 90.0,\n",
-       " 89.4,\n",
-       " 87.5,\n",
-       " 88.5,\n",
-       " 88.5,\n",
-       " 88.5,\n",
-       " 89.39999999999999,\n",
-       " 90.0,\n",
-       " 89.0,\n",
-       " 90.0,\n",
-       " 92.5,\n",
-       " 89.5,\n",
-       " 88.5,\n",
-       " 89.0,\n",
-       " 91.5,\n",
-       " 89.5,\n",
-       " 88.0,\n",
-       " 88.0,\n",
-       " 89.5,\n",
-       " 90.5,\n",
-       " 85.99999999999999,\n",
-       " 88.99999999999999,\n",
-       " 89.5,\n",
-       " 91.5,\n",
-       " 89.5,\n",
-       " 88.0,\n",
-       " 91.0,\n",
-       " 91.0,\n",
-       " 88.5,\n",
-       " 85.5,\n",
-       " 87.99999999999999,\n",
-       " 87.89999999999999,\n",
-       " 91.99999999999999,\n",
-       " 87.5,\n",
-       " 88.0,\n",
-       " 93.0,\n",
-       " 88.49999999999999,\n",
-       " 87.0,\n",
-       " 87.39999999999999,\n",
-       " 89.0,\n",
-       " 88.0,\n",
-       " 89.0,\n",
-       " 87.5,\n",
-       " 89.0,\n",
-       " 90.0,\n",
-       " 93.5,\n",
-       " 87.39999999999999,\n",
-       " 87.0,\n",
-       " 88.0,\n",
-       " 87.99999999999999,\n",
-       " 90.4,\n",
-       " 92.5]"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "juncao = pd.read_excel('Junção.xlsx')\n",
-    "lista_acuracia = []\n",
-    "for i in range(100):\n",
-    "    [treino2,teste2] = train_test_split(juncao, test_size= 0.4, shuffle= True)\n",
-    "\n",
-    "    abs_cont = trata_df(treino2, 'CONT')[0]\n",
-    "    abs_ed = trata_df(treino2, 'ED')[0]\n",
-    "    abs_plat = trata_df(treino2, 'PLAT')[0]\n",
-    "    abs_outros = trata_df(treino2, 'OUTROS')[0]\n",
-    "\n",
-    "    plv_cont = trata_df(treino2, 'CONT')[2]\n",
-    "    plv_ed = trata_df(treino2, 'ED')[2]\n",
-    "    plv_plat = trata_df(treino2, 'PLAT')[2]\n",
-    "    plv_outros = trata_df(treino2, 'OUTROS')[2]\n",
-    "    \n",
-    "    plv_geral = plv_cont + plv_ed + plv_plat + plv_outros\n",
-    "    plv_possiveis = total_possibilidade(plv_geral)\n",
-    "\n",
-    "    lista_classifica_automa = Classificador(teste2,1)\n",
-    "\n",
-    "    teste2['Classificador'] = lista_classifica_automa\n",
-    "    tabela_crosstab = pd.crosstab(teste2.Target, teste2.Classificador, normalize=True ).round(3) * 100\n",
-    "    acuracia = calcula_acertos(tabela_crosstab)\n",
-    "    lista_acuracia.append(acuracia)\n",
-    "\n",
-    "\n",
-    "lista_acuracia\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2843,31 +2906,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "livr        267\n",
-       "nao         235\n",
-       "autor        75\n",
-       "histor       52\n",
-       "outr         41\n",
-       "           ... \n",
-       "descrit       1\n",
-       "pre           1\n",
-       "vaz           1\n",
-       "influenc      1\n",
-       "vermelh       1\n",
-       "Length: 1961, dtype: int64"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
