--- a/Projeto1 Template.ipynb
+++ b/Projeto1 Template.ipynb
@@ -2823,14 +2823,7 @@
     "    lista_acuracia.append(acuracia)\n",
     "\n",
     "\n",
-    "lista_acuracia\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n"
+    "lista_acuracia"
    ]
   },
   {
